# app_paxpar

./: .gitignore  README.md  app.vue  error.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
back/: README.md  main.py  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/uploads/: logout.txt
components/: Dropzone.vue  Footer.vue  Header.vue  Profiles.vue
components/craft/: ListingCraft.vue  Message.vue  [id].vue
components/form/: Field.vue
components/profile/: Avatar.vue
components/ui/: Sidbar.vue
middleware/: auth.js
pages/: bio.vue  camille.vue  checklist.vue  confirm.vue  contact.vue  craftform.vue  home.vue  index.vue  login.vue  logout.vue  menuVertical.vue  profile.vue  register.vue  vertical.vue
pages/profiles/listings/: index.vue
pages/profiles/listings/view/: [id].vue
