[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["karim boussakri <kboussakridev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pypdf = "^4.2.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
